--- a/2.Code/s3_plot.Rmd
+++ b/2.Code/s3_plot.Rmd
@@ -210,6 +210,7 @@ data_summary1 %>%  ggplot( aes(y = indicator , x = value_use)) +
 
 
 # Plots - Unemployement rate - 2019 longer trend
+## update 2023 April
 
 ```{r}
 
@@ -226,9 +227,9 @@ county_unemprate_19_20 <- county_unemprate_19_20 %>%
 
 
 # Read data: county IT budget
-county_week <- as.data.frame(read_dta(here("Stata", "county_week_panel_new.dta"))) 
+county_week <- as.data.frame(read_dta(here(output, "county_week_panel_april_2023.dta"))) 
 
-county_it <- county_week %>% select(county, q4_high_it_budget_median) %>% distinct()
+county_it <- county_week %>% select(county, q4_high_it_median,q2_high_lowskill, q4_high_lowskill) %>% distinct()%>%mutate(countyfips = as.integer(county))
 
 county_info <- read.csv(here(raw_data, "GeoIDs - County.csv"))
 county_info <- county_info %>% 
@@ -236,7 +237,7 @@ county_info <- county_info %>%
   select(countyfips, county_name)
 
 county_use <- county_it %>% 
-  left_join(county_info, by = c("county" = "countyfips")) %>% 
+  left_join(county_info) %>% 
   left_join(county_unemprate_19_20) %>% 
   filter(period != "M13") %>% 
   mutate(month = as.numeric(substr(period, 2, 3)),
@@ -249,7 +250,33 @@ it_group_county_unemployrate <- county_use %>%
   group_by(q4_high_it_budget_median, date) %>% 
   summarise(unemployment = mean(value, na.rm = TRUE)) %>% 
   ungroup()
+
+
+skill_group_county_unemployrate <- county_use %>% 
+  mutate(value = as.numeric(value)) %>% 
+  group_by(q2_high_lowskill, date) %>% 
+  summarise(unemployment = mean(value, na.rm = TRUE)) %>% 
+  ungroup()
 ```
+
+```{r}
+
+skill_group_county_unemployrate %>% filter(!is.na(q2_high_lowskill)) %>%
+  
+  ggplot(aes(x = date, y = unemployment, 
+            color = factor(q2_high_lowskill) )) +
+  geom_line(size= 1.2) +
+  scale_color_manual(name = "Low Skill", labels = c("YES", "NO"),values=c( "blue", "red"))+
+  labs(x = "", y = " % Rate", title = "County Unemployment Rate: 2019 - 2020") +  
+      theme_minimal() + 
+      theme(plot.title = element_text(size = rel(1.6), hjust = 0.5),
+           legend.title = element_text(size = rel(0.8)),
+           plot.caption = element_text(size = rel(1)),
+           legend.position = "top") +
+    labs(caption = "Data Source: U.S. Bureau of Labor Statistics - Local Area Unemployment Statistics (LAUS)")
+  
+```
+
 
 ```{r Plot}
 
