--- a/2.Code/s2_analyze_data_descriptive.Rmd
+++ b/2.Code/s2_analyze_data_descriptive.Rmd
@@ -125,11 +125,11 @@ county_sample_median <- county_sample_basic %>%
 county_acs <- read.csv(here("1.Data", "2.intermediate_data", "county_demo.csv"))
 
 county_acs_new <- read.csv(here("1.Data", "2.intermediate_data", "county_demo.csv"))
-county_acs_edu <- 
+ 
 
 county_sample_acs <- county_sample %>% 
-                       select(-X))
-              left_join(county_acs %>% 
+                       select(-X)%>% 
+              left_join(county_acs) 
 
 county_sample_median <- county_sample_median %>% 
   left_join(county_acs %>% select(-X))
@@ -138,7 +138,7 @@ county_pop_median <- county_pop_median %>%
   left_join(county_acs %>% rename("COUNTY" = "countyfips")%>%  select(-X))
 
 
-```=
+```
 
 
 
@@ -177,6 +177,7 @@ psych::describe(df, fast = TRUE)
 mydata <- iris %>%
   filter(Species != "setosa") %>%
   as_tibble()
+
 mydata %>% sample_n(6)
 mydata.long <- mydata %>%
   pivot_longer(-Species, names_to = "variables", values_to = "value")
